<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".MainActivity">

    <TextView
        android:fontFamily="@font/inter_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:text="@string/text_registration"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="@font/inter_medium"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/input_userName_label"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <EditText
        android:fontFamily="@font/inter_medium"
        android:id="@+id/inputUserNameReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/input_userName_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white" />

    <TextView
        android:fontFamily="@font/inter_medium"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_email_label"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="14sp" />

    <EditText
        android:fontFamily="@font/inter_medium"
        android:id="@+id/inputEmailReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/input_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white" />

    <TextView
        android:fontFamily="@font/inter_medium"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_password_label"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="14sp" />

    <EditText
        android:fontFamily="@font/inter_medium"
        android:id="@+id/inputPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white" />

    <Button
        android:fontFamily="@font/inter_medium"
        android:id="@+id/buttonRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/button_signup_text" />

    <TextView
        android:id="@+id/linkToAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter"
        android:text="@string/text_login_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <!--    <EditText-->
    <!--        android:id="@+id/todo_input"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginBottom="30dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/add_todo_text"-->
    <!--        android:inputType="text"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/addButton"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.512"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <ListView-->
    <!--        android:id="@+id/todos_list"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="400dp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:layout_marginBottom="20dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/todo_input"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/hello_label"-->
    <!--        app:layout_constraintVertical_bias="0.041" />-->

    <!--    <Button-->
    <!--        android:id="@+id/addButton"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="30dp"-->
    <!--        android:text="@string/add_button"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

</LinearLayout>